updated, install script

--- a/annote.config
+++ b/annote.config
@@ -9,7 +9,7 @@ default_group=default
 
 default_tag=default
 
-db_loc=/home/dinesh/Workspace/projects/git/annote/db
+#db_loc=
 
   editor=vim
 gui_editor=gedit
@@ -23,4 +23,5 @@ gui_editor=gedit
 # <TAGS>    note tags
 # <DELIM>   delimiter, specify delimiter in `list_delim' except for space
 #
-list_format=<SNO><DELIM><NID><DELIM><GROUP><DELIM><TAGS><DELIM><TITLE>
+#list_format=<SNO><DELIM><NID><DELIM><GROUP><DELIM><TAGS><DELIM><TITLE>
+list_format=<SNO><DELIM><NID><DELIM><TITLE>
