added multiple databases support, and minor fixes

--- a/annote.config
+++ b/annote.config
@@ -3,16 +3,29 @@
 # <space> will be ignored in specfying key-value pair
 # <space><key><space>=<space><value><space>
 
-
-# group
+# default group name
 default_group=default
 
+# default tag name
 default_tag=default
 
-#db_loc=
+# default database location
 
+#db_loc=/db/loc
+
+# non-default multiple database locations
+# Specify multiple databases and refer them through command line args using key 
+# 'kname' as in `dbl_key_kname=<db location>'. 
+# All key's must be preceded by 'dbl_key_', and then provide user defined key.
+
+#dbl_key_k1=/db/loc/1
+#dbl_key_k2=/db/loc/2
+
+# editor
   editor=vim
 gui_editor=gedit
+
+# output formatting
 # uncomment for specifying anything except space
 #list_delim="  "
 # create format for list using
