--- a/annote.config
+++ b/annote.config
@@ -22,7 +22,7 @@ default_tag=default
 #dbl_key_k2=/db/loc/2
 
 # editor
-  editor=vim
+  editor=vim -u ~/.annote/vimrc  
 gui_editor=gedit
 
 # output formatting
