added default temprory db

--- a/annote.config
+++ b/annote.config
@@ -21,6 +21,9 @@ default_tag=default
 #dbl_key_k1=/db/loc/1
 #dbl_key_k2=/db/loc/2
 
+# temp databse to hold temprory data that will be deleted at shutdown
+dbl_key_temp=/tmp/annote
+
 # editor
   editor=vim -u ~/.annote/vimrc  
 gui_editor=gedit
