list_sort_as property added

--- a/annote.config
+++ b/annote.config
@@ -41,3 +41,13 @@ gui_editor=gedit
 #
 #list_format=<SNO><DELIM><NID><DELIM><GROUP><DELIM><TAGS><DELIM><TITLE>
 list_format=<SNO><DELIM><NID><DELIM><TITLE>
+
+# List output sorting
+# values(<val>) can be:
+# 'L|l' --> latest on the top,
+# 'O|o' --> oldest on the top,
+# 'M|m' --> recent modified on top
+# 'F|f' --> display as they're found (default)
+#list_sort_as=<val>
+list_sort_as=F
+
